# type-v

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  leak-track-mac-arm.sh
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml
samples/: sample1.tv  sample2.tv  sample3.tv  sample5.tv  sample6.tv  sample8.tv
source/: core.c  core.h  engine.c  engine.h  gc.c  gc.h  main.c
source/allocator/: allocator.c  allocator.h
source/api/: array_api.c  array_api.h  struct_api.c  struct_api.h  typev_api.c  typev_api.h
source/asm/: object_find_global_index.asm
source/assembler/: assembler.c  assembler.h
source/dynlib/: dynlib.c  dynlib.h
source/env/: env.c  env.h
source/errors/: errors.c  errors.h
source/gc/: gc.c  gc.h  mark.c  mark.h
source/instructions/: instructions.c  instructions.h  opcodes.h  opfuncs.h
source/platform/: platform.h
source/queue/: queue.c  queue.h
source/stack/: stack.c  stack.h
source/std/: io.c  io.h  std.c  std.h  string.c  string.h
source/utils/: log.h  utils.c  utils.h
stdcore/: CMakeLists.txt
stdcore/source/: datetime.c  datetime.h  main_test.c  stdcore.c
stdfs/: CMakeLists.txt
stdfs/source/: cwalk.c  cwalk.h  fs.c  fs.h  stdfs.c
stdio/: CMakeLists.txt
stdio/source/: stdio.c
stdmath/: CMakeLists.txt
stdmath/source/: stdmath.c
string/: CMakeLists.txt
string/source/: string.c  string.h
